  - Fix NPE when a town ruins, courtesy of Warriorrrr with PR #5119.
    - Closes #5118.
  - Add missing color code translations to resident surnames, courtesy of illumeleet with PR #5120.
    - Translates colour codes used in surnames the same way we already did resident titles.
    - Shows colouring properly in /nation|town set title|surname command feedback when coloured titles/surnames are set. 
0.97.0.18:
  - Towns can now set their mapcolor, like nations do.
    - Requires a forthcoming update to Dynmap-Towny before you will see this in effect on your Dynmap.
  - New Command: /town set mapcolor {color}
    - Required for #5093.
  - New Permission Node: towny.command.town.set.mapcolor.
    - Mayors already get this via towny.command.town.*, no change required in townyperms.yml.
  - New Placeholder: %townyadvanced_town_map_color_hex%
    - Returns the colour set by the town.
  - Language files bumped to 0.116.
  - Fix removing a null jail.
  - Fix missing townless tab complete on /ta purge command.
  - Allow moving of blocks between wilderness plot borders, courtesy of Warriorrrr with PR #5128.
    - Closes #5127.
  - Expand checkPlugin() and /towny universe output, courtesy of TheFlagCourier with PR #5129.
  - Fix some fall-throughs in PlotCommand, courtesy of silverwolfg11 with PR #5131
  - Replace all sysouts, courtesy of Warriorrrr with PR #5126
0.97.0.19:
  - Fix SpawnLocation particles skipping particles.
  - New Feature: Hibernated Residents
    - Residents that are deleted by Towny will become hibernated residents.
    - Towny will remember their true registered date if the player ever rejoins the server.
    - Closes #5135.
0.97.0.20: 
  - Fix pagination footer for /t plotgrouplist and /t jail list.
  - Fix missing message feedback for `/ta nation [nation] set` commands.
    - Closes #5144. 
  - Prevent adding a townblock to a plot group if it doesn't match the groups' townblock type.
    - Closes #5141.
  - Bump language files to 0.117.